--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/nmsn/color-utils-site#readme",
   "dependencies": {
-    "color-utils": "file:.yalc/color-utils",
+    "@nmsn/color-utils": "^0.0.1",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
