--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.9",
     "@types/react": "^18.0.17",
     "@types/react-color": "^3.0.6",
     "typescript": "^4.7.4"
