--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^18.7.9",
