--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/nmsn/color-utils-site#readme",
   "dependencies": {
+    "@emotion/css": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@nmsn/color-utils": "0.1.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.9",
