--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-color": "^3.0.6",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   }
 }
