--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "prettier": "prettier --write"
+    "lint": "next lint --fix",
+    "release": "rltb"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
+    "release-toolbox": "^0.1.0",
     "typescript": "^4.9.5"
   }
 }
