--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@nmsn/color-utils": "0.3.0",
+    "@nmsn/color-utils": "0.4.0",
+    "copy-to-clipboard": "^3.3.3",
     "next": "^12.3.4",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
